# cadkit-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
cadkit_mcp/: auth_cli.py  oauth.py  quota.py  selection.py  server.py  sketch.py
docs/: TESTING.md  TEST_SUMMARY.md
examples/: angle_bracket.md
onshape_mcp/api/: client.py
scripts/: build_example_bracket.py  build_example_flange.py  build_hub_6mm_dshaft.py  fs_probe_sketch_dof.md  smoke_counterbore.py  smoke_fillet_adjacency.py  smoke_offset_plane.py  smoke_p2.py  smoke_pattern_cut.py  smoke_pattern_mirror.py  smoke_single_circle.py  smoke_sketch_pattern_linked.py  smoke_variable_center.py
tests/: test_cadkit_builders.py  test_cadkit_oauth.py
