[project]
name = "cadkit-mcp"
version = "0.3.0"
description = "cadkit + onshape MCP servers for idiomatic, fully-defined, variable-driven CAD authoring in Onshape"
authors = [
    {name = "saltyeg"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["onshape_mcp", "cadkit_mcp"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before local imports read env vars
"onshape_mcp/server.py" = ["E402"]
"run_mcp_server.py" = ["E402"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--showlocals",
    "--tb=short",
    "--cov=onshape_mcp",
    "--cov=cadkit_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["onshape_mcp", "cadkit_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
]
branch = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
precision = 2
show_missing = true
# cadkit_mcp's live paths (server dispatch, selection FeatureScript, devkit, quota) are
# intentionally NOT unit-tested — they need the Onshape API, and the project conserves the
# 2,500-calls/year budget by verifying them with on-demand smokes instead. So the combined
# floor (~73%) is below onshape_mcp's standalone ~87%; raise it as cadkit's offline tests grow.
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "def __repr__",
    "def __str__",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.scripts]
onshape-mcp = "onshape_mcp.server:main"
cadkit-mcp = "cadkit_mcp.server:main"
